@@ -1,3 +1,10 @@
+2001-07-24  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* network.pl.in (xst_network_interface_ensure_broadcast_and_network):
+	if the interface has address and netmask, calculate the broadcast
+	and subnet.
+	(xst_network_interfaces_get): call this function per iface.
+
 2001-07-24  Hans Petter Jansson  <hpj@ximian.com>
 
 	* time-conf.in (time_sync_hw_from_sys): Implement.
